--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "async-kit": "^2.2.3",
     "get-pixels": "^3.3.0",
     "ndarray": "^1.0.18",
-    "nextgen-events": "^0.11.2",
+    "nextgen-events": "^0.13.0",
     "string-kit": "^0.6.9",
     "tree-kit": "^0.5.26"
   },
   "devDependencies": {
-    "expect.js": "^0.3.1"
+    "expect.js": "^0.3.1",
+    "tea-time": "^1.0.7"
   },
   "scripts": {
     "test": "tea-time -R dot"
